tests/ui/drop/missing-drop-method.stderr
error[E0046]: not all trait items implemented, missing one of: `drop`, `pin_drop`
  --> $DIR/missing-drop-method.rs:2:1
   |
LL | impl Drop for DropNoMethod {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^ missing one of `drop`, `pin_drop` in implementation

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0046`.
